Fix text alignmment

--- a/src/app/components/add-visualization/add-visualization.component.scss
+++ b/src/app/components/add-visualization/add-visualization.component.scss
@@ -66,6 +66,7 @@
 
 .center-contents {
     justify-content: center;
+    text-align: center;
     display: flex;
 }
 
